# Tauri-Calc

./: .gitignore  LICENSE  README.md  index.html  jest.config.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
Installer/Linux/deb/Calc_0.1.0_amd64/control/: control  md5sums
Installer/Linux/rpm/Calc-0.1.0-1.x86_64/usr/share/applications/: Calc.desktop
Installer/MAC OS/Calc.app/Contents/: Info.plist
Installer/MAC OS/Calc.app/Contents/Resources/: Calc.icns
Installers/Mac OS/Calc.app/Contents/: Info.plist
Installers/Mac OS/Calc.app/Contents/MacOS/: Calc
src/: App.css  App.test.tsx  App.tsx  setupTests.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: app.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domain/: domain.rs  mod.rs
src-tauri/src/infrastructure/: infrastructure.rs  mod.rs
src-tauri/src/linux/: app.desktop
src-tauri/src/presentation/: mod.rs  presentation.rs
src-tauri/src/usecases/: mod.rs  usecases.rs
src/domain/: CalculatorModel.test.ts  CalculatorModel.ts
src/infrastructure/: ClipboardService.test.ts  ClipboardService.ts  WindowService.ts
src/presentation/components/: CalculatorDisplay.test.tsx  CalculatorDisplay.tsx  ContextMenu.tsx  KeypadButtons.test.tsx  KeypadButtons.tsx  TitleBar.test.tsx  TitleBar.tsx
src/presentation/hooks/: useCalculator.test.ts  useCalculator.ts  useContextMenu.ts  useKeyboardInput.ts  useResizable.ts
src/usecases/: CalculatorService.test.ts  CalculatorService.ts
