[package]
name = "Calc"
version = "0.1.0"
description = "A simple calculator in Tauri (Rust + HTML/CSS/Typescript)"
authors = ["Vinicius Buscacio"]
edition = "2021"

[lib]
name = "calc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] } 

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meval = "0.2" 
tauri-plugin-clipboard-manager = "2"
num-bigint = "0.4"
num-traits = "0.2"
num-rational = "0.4"
