[package]
name = "Calc"
version = "1.0.0"
description = "A simple calculator in Tauri (Rust + HTML/CSS/Typescript)"
authors = ["Vinicius Buscacio"]
edition = "2021"

[lib]
name = "calc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] } 

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meval = "0.2" 
tauri-plugin-clipboard-manager = "2"
num-bigint = "0.4"
num-traits = "0.2"
num-rational = "0.4"

# Optimized release profile for faster startup and smaller binary
[profile.release]
opt-level = "z"       # Optimize for size (faster load times)
lto = true            # Link Time Optimization
codegen-units = 1     # Better optimization (slower compile)
panic = "abort"       # Remove unwinding code
strip = true          # Strip symbols from binary
